Create basic app layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,15 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
+    "import/no-extraneous-dependencies": "off",
+    "import/no-unresolved": "off",
     "no-console": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
