--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "import/no-unresolved": "off",
     "no-console": "off",
     "no-param-reassign": "off",
+    "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "no-underscore-dangle": "off",
     "prettier/prettier": [
